# corpus-cases-medilegal-nz

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  findings.md  pixi.toml  progress.md  pyproject.toml  renovate.json  subagents.yaml  swarm-config.yaml  task_plan.md
.github/workflows/: code_quality.yml  codeql.yml  dependency_review.yml  mirror_sync.yml  monthly_dynamic_archive_publication.yml  multi_source_sync.yml  osv_scan.yml  riopa_project_sync.yml  scorecard.yml  tests.yml
.swarm/: config.json
.swarm/audit/: mission-4a8a1b0c.jsonl  mission-837e8d7d.jsonl  mission-d216a733.jsonl  mission-default.jsonl  mission-swarm-mission.jsonl
.swarm/mailboxes/agent/: heartbeat
.swarm/mailboxes/frontend/: heartbeat
.swarm/mailboxes/junior/: heartbeat
.swarm/mailboxes/oracle/: heartbeat
.swarm/missions/: 06348a44.json  4a8a1b0c.json  837e8d7d.json  d216a733.json
conductor/: maturity-checklist.md  product-guidelines.md  product.md  quality-maintenance-checklist.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/bleeding_edge_archive_intelligence_20260701/: index.md  metadata.json  phase2_6_completion_evidence.md  plan.md
conductor/archive/cross_repo_archive_federation_20260701/: federation_completion_evidence.md  index.md
conductor/archive/privacy_takedown_governance_20260701/: index.md  metadata.json  plan.md  privacy_completion_evidence.md  spec.md
conductor/code_styleguides/: markdown.md
conductor/registry-submissions/: dataset.json
conductor/tracks/: multi_source_plan.md
conductor/tracks/archive_maturity_hardening_20260702/: index.md  metadata.json  phase1_publication_overlay_evidence.md  phase2_workflow_gate_evidence.md  phase3_observability_anomaly_evidence.md  phase4_claims_privacy_federation_evidence.md  plan.md  spec.md
conductor/tracks/bleeding_edge_archive_intelligence_20260701/: index.md  metadata.json  phase1_intelligence_model_evidence.md  plan.md  spec.md
conductor/tracks/coronial_integration/: metadata.json  plan.md  spec.md
conductor/tracks/cross_repo_archive_federation_20260701/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/era_integration/: metadata.json  plan.md  spec.md
conductor/tracks/github_governance_automation_hardening_20260701/: attestation_verification_evidence.md  index.md  metadata.json  (+6 more)
config/: coronial_pipeline.yaml  era_pipeline.yaml  hdc_pipeline.yaml  hpdt_pipeline.yaml  human_rights_pipeline.yaml  ipca_pipeline.yaml  law_commission_pipeline.yaml  moj_courts_pipeline.yaml  moj_tribunals_pipeline.yaml  ombudsman_pipeline.yaml  privacy_pipeline.yaml  royal_commissions_pipeline.yaml  teachers_pipeline.yaml
docs/: cli-first.md  mirror-sync.md  monthly-dynamic-archive-publication.md  privacy-takedown-governance.md  riopa-project-synchronisation.md  source-parser-contract.md
docs-site/: astro.config.mjs  package.json
schemas/: release_evidence.schema.json
scripts/: benchmark_selectolax_parser.py  build_archive_intelligence.py  build_archive_intelligence_bundle.py  build_release_evidence.py  check_metadata_packages.py  check_public_surface_audit.py  check_release_evidence.py  check_version_consistency.py  mirror_readiness.py  profile_pipelines.py  publication_readiness.py  publish_huggingface_release.py  publish_zenodo_draft.py  sync_riopa_project.py
src/corpus_cases_medilegal_nz/: __init__.py  archive.py  archive_intelligence.py  cli.py  collection_proof.py  config_models.py  exporter.py  fetcher.py  hf_sync.py  medilegal_parser.py  mirror.py  parser_contract.py
tests/: test_archive_intelligence.py  test_archive_release.py  test_collection_proof.py  test_config_models.py  test_exporter.py  test_fetcher.py  test_malformed_source_fixtures.py  test_medilegal_parser.py  test_mirror_workflow.py  test_monthly_publication_workflow.py  test_parser_contract.py  test_publication_adapters.py  test_riopa_project_sync.py  test_source_adapter_parser_integration.py  test_source_fixtures.py  test_track14_selectolax_benchmark.py  test_version_consistency.py
tests/test_sources/: test_hf_sync_pipeline.py  test_multi_source_config.py  test_source_adapters.py  test_sources_registry.py
(+105 files in other folders)
