[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "corpus_cases_medilegal_nz"
version = "0.1.0"
description = "New Zealand medical-legal case corpus pipeline (HDC, HPDT, etc.)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Maintainer" }]
dependencies = [
    "polars>=1.0.0",
    "pyarrow>=16.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "defusedxml>=0.7.1",
    "huggingface_hub>=0.23.0",
    "click>=8.1.0",
    "typer>=0.26.7",
    "rich>=15.0.0",
    "nlp_policy_nz>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.90",
    "ruff>=0.3.0",
    "pyright>=1.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/corpus_cases_medilegal_nz"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "A", "C4", "T20",
    "PT", "SIM", "ARG", "PTH", "PL", "RUF",
    "ANN", "D", "TCH", "YTT", "RET", "FURB",
    "COM", "DJ", "DTZ", "EM", "ERA", "EXE",
    "FA", "FLY", "ICN", "INP", "INT", "ISC", "LOG",
    "NPY", "PD", "PERF", "PGH", "PIE",
    "PYI", "Q", "RSE", "S", "SLF", "T10", "TC", "TID", "TRY",
]
ignore = [
    "PLR0913",                   # Too many arguments (acceptable for CLI)
    "E501",                      # Line length handled by formatter
    "ANN101",                    # Missing type annotation for self
    "ANN102",                    # Missing type annotation for cls
    "D107",                      # Missing docstring in __init__
    "D203",                      # 1 blank line before class (D211 preferred)
    "D212",                      # Multi-line docstring summary on first line
    "D213",                      # Multi-line docstring summary on second line
    "D404",                      # Docstring shouldn't start with "This"
    "D415",                      # First line should end with punctuation
    "COM812",                    # Trailing comma missing — handled by formatter
    "ISC001",                    # Implicit string concat — handled by formatter
    "EM101",                     # String literal in exception
    "EM102",                     # F-string in exception
    "PLR2004", "PLR0912", "PLR0915",
    "PERF401",                   # List comprehension vs loop
    "TRY301", "TRY003", "TRY004",
    "S110", "S311",
    "S404", "S603", "S607",
    "PLW2901",
    "TC001", "TC002", "TC003",
    "FA100", "ICN001",
    "PLC0415",
    "ERA001", "EXE001",
    "RUF100",
    "PLW0603",
    "N814",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ANN",                       # Relax type annotations in tests
    "D",                         # Relax docstrings in tests
    "T20",                       # Allow print statements in tests
    "S101",                      # Allow assert in tests
    "PLR2004",                   # Allow magic values in tests
    "SLF", "ARG",
    "ERA001", "INP001", "S106", "S107",
    "PGH001", "PIE790",
    "EM", "TRY", "PERF", "FLY002", "PT017",
    "C408", "TC006", "Q000", "S314",
    "PLC0415",
]
"*/__init__.py" = [
    "D",                         # Relax docstrings in __init__
]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.pyright]
strict = true
include = ["src"]
exclude = ["**/__pycache__", ".venv"]
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportMissingTypeStubs = false
reportUnknownMemberType = false

[tool.coverage.run]
source = ["src"]
omit = ["*/__pycache__/*", "*.venv/*"]
branch = true

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
